# towny-server

./: Cargo.toml
entity/: Cargo.toml
entity/src/: account.rs  lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: forms.rs  handlers.rs  main.rs  mutation.rs  query.rs
src/components/: account.rs  city.rs  map.rs  mod.rs
