[package]
name = "towny-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
actix-web = { version = "4.9.0", features = ["macros", "rustls-0_23"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls", "debug-print"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
listenfd = "1.0.1"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v7"] }
bcrypt = "0.15.1"

